[gd_scene load_steps=5 format=3 uid="uid://s5ockgosua3i"]

[ext_resource type="Texture2D" uid="uid://dlji1sxtd0d5v" path="res://Assets/Menus/360_F_921846752_DgEV3q7y1T86PrRgEplsQxgc4hD98Phd-transformed.jpeg" id="1_0tva7"]
[ext_resource type="Theme" uid="uid://7fb73ota5opl" path="res://Resources/Theme/theme.tres" id="1_dd0c7"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_xewxv"]

[sub_resource type="LabelSettings" id="LabelSettings_ypjf5"]
font_size = 95

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xewxv")

[node name="360F921846752DgEv3q7y1t86PrRgEplsQxgc4hD98Phd-transformed" type="Sprite2D" parent="."]
position = Vector2(573, 300)
scale = Vector2(0.544271, 0.544271)
texture = ExtResource("1_0tva7")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 391.5
offset_top = 177.0
offset_right = 760.5
offset_bottom = 281.0
size_flags_vertical = 0
theme = ExtResource("1_dd0c7")
text = "Ironmoon"
label_settings = SubResource("LabelSettings_ypjf5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.5
offset_top = -52.0
offset_right = 184.5
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dd0c7")
text = "Play
"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dd0c7")
text = "Settings"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dd0c7")
text = "Exit
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
